[Design View] Fix issue #11: scrollbars when dragging

--- a/src/css/builder.css
+++ b/src/css/builder.css
@@ -10,6 +10,9 @@
 /***************************/
 /* Element specific tweaks */
 /***************************/
+body {
+    overflow: hidden;
+}
 html {
     padding: 0px;
 }
